--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "css-loader": "0.23.1",
+    "deep-freeze-strict": "1.1.1",
     "expect": "1.14.0",
     "foundation-sites": "6.2.4",
     "jquery": "2.2.4",
@@ -42,6 +43,7 @@
     "node-sass": "3.13.1",
     "node-uuid": "1.4.8",
     "react-addons-test-utils": "15.3.2",
+    "redux": "3.3.1",
     "sass-loader": "3.2.3",
     "script-loader": "0.6.1",
     "style-loader": "0.13.2"
